# Multiverso

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  IMultiverso.sln  LICENSE  Makefile  MakefileDocker  Multiverso.sln  README.md
Applications/LogisticRegression/: CMakeLists.txt  LogisticRegression.vcxproj  README.md
Applications/LogisticRegression/example/: run.sh
Applications/LogisticRegression/src/: configure.cpp  configure.h  logreg.cpp  reader.cpp  reader.h
Applications/LogisticRegression/src/model/: model.cpp  model.h  ps_model.cpp
Applications/LogisticRegression/src/objective/: ftrl_objective.h  objective.cpp  objective.h  sigmoid_objective.h  softmax_objective.h
Applications/LogisticRegression/src/updater/: sgd_updater.h  updater.cpp
Applications/LogisticRegression/src/util/: common.h  hopscotch_hash.h  sparse_table.h
Applications/WordEmbedding/: CMakeLists.txt  README.md  WordEmbedding.vcxproj  WordEmbedding.vcxproj.filters
Applications/WordEmbedding/example/: Readme.txt
Applications/WordEmbedding/preprocess/: util.cpp  util.h  word_count.cpp
Applications/WordEmbedding/src/: block_queue.cpp  block_queue.h  communicator.cpp  communicator.h  constant.h  data_block.cpp  data_block.h  dictionary.cpp  dictionary.h  distributed_wordembedding.cpp  distributed_wordembedding.h  huffman_encoder.cpp  huffman_encoder.h  main.cpp  memory_manager.cpp  memory_manager.h  reader.cpp  reader.h  resource.h  trainer.cpp  trainer.h  util.cpp  util.h  word_embedding.cpp  word_embedding.h  wordembedding.cpp  wordembedding.h
Test/unittests/: CMakeLists.txt  MultiversoTests.vcxproj  UnitTests.vcxproj  UnitTests.vcxproj.filters  test_array.cpp  test_monitor.cpp  test_multiverso.cpp
next/: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  IMultiverso.sln  IMultiverso.vcxproj  IMultiverso.vcxproj.filters  README.md  run_docker.sh  table_factory.h  test.sh
next/IMultiverso/: IMultiverso.opensdf  IMultiverso.sln  IMultiverso.vcxproj  IMultiverso.vcxproj.filters
next/IMultiverso/Test/: Test.vcxproj  main.cpp
next/IMultiverso/new/: actor.cpp  actor.h  array_table.h  blob.h  communicator.cpp  communicator.h  controller.cpp  controller.h  kv_table.h  log.cpp  log.h  message.h  multiverso.cpp  multiverso.h  net.cpp  net.h  server.cpp  server.h  table.cpp  table_interface.h  waiter.h  worker.cpp  worker.h  zoo.cpp  zoo.h
next/Test/: CMakeLists.txt  MPIWrapper.h  Test.vcxproj  Test.vcxproj.filters  main.cpp  test_async_buffer.cpp  test_example.cpp  test_filter.cpp
next/docker-ubuntu/: README.md  bootstrap.sh  hdfs-site.xml
next/include/: .gitignore  multiverso.h  table_interface.h
next/include/multiverso/: actor.h  aggregator.h  barrier.h  blob.h  communicator.h  dashboard.h  delta_pool.h  double_buffer.h  hdfs_file_sys.h  io.h  local_file_sys.h  lock.h  log.h  message.h  meta.h  multiverso.h  net.h  node.h  row_iter.h  server.h  table.h  table_interface.h  updater.h  vector_clock.h  worker.h  zoo.h
next/include/multiverso/net/: allreduce_engine.cpp  allreduce_engine.h  allreduce_topo.cpp  mpi_net.h  net_allreduce.h  zmq_net.h
next/include/multiverso/table/: adam_array_table.h  array_table.h  historic_matrix_table.h  kv_table.h  matrix_table.h  smooth_array_table.h
next/include/multiverso/updater/: adagrad_updater.h  asgd_updater.h  second_order_gradient_updater.h  sgd_updater.h  smooth_gradient_updater.h  updater.h
next/include/multiverso/util/: async_buffer.h  configure.h  hdfs.h  hdfs_file_sys.h  hdfs_stream.h  io.h  (+6 more)
next/multiverso/: README.md  arena.cc  arena.cpp  arena.h  arena_test.cpp  base.h  bounded_queue.h  message.h  table_interface.h  waiter.h  zmq_helper.h
next/new/: actor.cpp  actor.h  array_table.h  blob.h  communicator.cpp  communicator.h  controller.cpp  kv_table.h  log.cpp  log.h  message.h  multiverso.h  net.cpp  net.h  table_interface.h  worker.cpp  worker.h  zoo.cpp  zoo.h
next/source/: actor.cpp  blob.h  communicator.cpp  controller.h  message.h  multiverso.cpp  server.h  zoo.cpp
next/source/util/: log.cpp  log.h  waiter.h
next/src/: CMakeLists.txt  actor.cpp  actor.h  communicator.cpp  controller.cpp  controller.h  dashboard.cpp  kv_table.h  message.h  mpi_net.cpp  multiverso.cpp  net.cpp  node.cpp  server.cpp  table.cpp  timer.cpp  worker.cpp  worker_history.cpp  zoo.cpp  zoo.h
next/src/multiverso/: CMakeLists.txt  aggregator.cpp  communicator.cpp  data_block.cpp  delta_pool.cpp  hdfs_file_sys.cpp  io.cpp  local_file_sys.cpp  log.cpp  mpi_util.cpp  multiverso.cpp  row_iter.cpp  server.cpp  table_iter.cpp  trainer.cpp
next/src/multiverso_server/: CMakeLists.txt  cl_parser.h  main.cpp
next/src/table/: array_table.cpp  matrix_table.cpp  sparse_matrix_table.cpp
next/src/updater/: updater.cpp
next/src/util/: configure.cpp  hdfs_file_sys.cpp  io.cpp  local_file_sys.cpp  local_stream.cpp  log.cpp  mv_flags.cpp  net_util.cpp  quantization_util.cpp
next/tests/: CMakeLists.txt  file_sys_tests.cpp
next/windows/: multiverso.sln
next/windows/multiverso/: multiverso.vcxproj.filters
next/windows/test/: test.vcxproj
next/yarn/: README.md
next/yarn/dmtk/: .project  pom.xml
next/yarn/example/: run.bat
next/yarn/zmq/: README.md
src/: CMakeLists.txt  Multiverso.vcxproj  Multiverso.vcxproj.filters  actor.cpp  allocator.cpp  blob.cpp  c_api.cpp  communicator.cpp  controller.cpp  dashboard.cpp  multiverso.cpp  net.cpp  server.cpp  table.cpp  table_factory.cpp  worker.cpp  zoo.cpp
src/io/: hdfs_stream.cpp  io.cpp  local_stream.cpp
src/multiverso/: CMakeLists.txt  aggregator.cpp  barrier.cpp  communicator.cpp  endpoint_list.cpp  lock.cpp  mpi_util.cpp  msg_pack.cpp  multiverso.cpp  parameter_loader.cpp  row.cpp  server.cpp  stop_watch.cpp  table.cpp  trainer.cpp  vector_clock.cpp  zmq_util.cpp
src/multiverso_server/: CMakeLists.txt  cl_parser.cpp  main.cpp
src/net/: allreduce_engine.cpp  allreduce_topo.cpp  mpi_net.cpp
src/table/: array_table.cpp  matrix.cpp  matrix_table.cpp  sparse_matrix_table.cpp
src/updater/: updater.cpp
src/util/: allocator.cpp  configure.cpp  log.cpp  net_util.cpp
(+147 files in other folders)
