cmake_minimum_required(VERSION 3.1)

PROJECT(MULTIVERSO)
FIND_PACKAGE(Threads REQUIRED)

SET(THIRD_PARTY ${PROJECT_SOURCE_DIR}/third_party)
SET(THIRD_PARTY_INC ${THIRD_PARTY}/include)
SET(THIRD_PARTY_LIB ${THIRD_PARTY}/lib)
SET(HEADERS_DIR ${PROJECT_SOURCE_DIR}/include/multiverso)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)



ADD_SUBDIRECTORY(src)

