cmake_minimum_required(VERSION 3.1)

PROJECT(MULTIVERSO)
FIND_PACKAGE(Threads REQUIRED)
FIND_LIBRARY(jvm names jvm REQUIRED)


SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O2")

SET(THIRD_PARTY ${PROJECT_SOURCE_DIR}/third_party)
SET(THIRD_PARTY_INC ${THIRD_PARTY}/include)
SET(THIRD_PARTY_LIB ${THIRD_PARTY}/lib)
SET(HEADERS_DIR ${PROJECT_SOURCE_DIR}/include/multiverso)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)


ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(tests)
