cmake_minimum_required(VERSION 3.1)

PROJECT(MULTIVERSO)
#FIND_PACKAGE(Threads REQUIRED)

if(UNIX)
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11")
endif()

SET(THIRD_PARTY ${PROJECT_SOURCE_DIR}/third_party)
SET(THIRD_PARTY_INC ${THIRD_PARTY}/include)
SET(THIRD_PARTY_LIB ${THIRD_PARTY}/lib)
SET(MULTIVERSO_HEADER_DIR ${PROJECT_SOURCE_DIR}/include)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(MULTIVERSO_LIBRARY_DIR ${PROJECT_BINARY_DIR}/lib)


ADD_SUBDIRECTORY(src)
# ADD_SUBDIRECTORY(Test)
