INCLUDE_DIRECTORIES(${HEADER_DIR})
INCLUDE_DIRECTORIES(${MULTIVERSO_HEADER_DIR})
MESSAGE(${TEST_INC})
INCLUDE_DIRECTORIES(${TEST_INC})

SET(MULTIVERSO_TEST_SRC main.cpp test_filter.cpp)

SET(CMAKE_CXX_COMPILER mpicxx)

LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})
LINK_DIRECTORIES(${GTEST_LIBRARIES})

if(USE_HDFS)
	link_directories(${HDFS_LIB})
	LINK_DIRECTORIES(${JVM_LIB})
endif()

MESSAGE(${MPI_LIBRARIES})
MESSAGE(${MPI_CXX_LIBRARIES})

#ADD_LIBRARY(gtest STATIC EXCLUDE_FROM_ALL gtest.h gtest-all.cpp)
ENABLE_TESTING()

ADD_EXECUTABLE(multiverso.test ${MULTIVERSO_TEST_SRC})

if(USE_HDFS)
	TARGET_LINK_LIBRARIES(multiverso.test multiverso ${MPI_CXX_LIBRARIES} jvm hdfs)
else()
	TARGET_LINK_LIBRARIES(multiverso.test multiverso gtest ${MPI_CXX_LIBRARIES})
endif(USE_HDFS)

SET_PROPERTY(TARGET multiverso.test PROPERTY CXX_STANDARD 11)
ADD_SUBDIRECTORY(gtest)
