
INCLUDE_DIRECTORIES(${HEADERS_DIR})
INCLUDE_DIRECTORIES(${THIRD_PARTY_INC})

SET(MULTIVERSO_TEST_SRC file_sys_tests.cpp)

MESSAGE(STATUS "multiverso_tests  ${THIRD_PARTY_INC}")

LINK_DIRECTORIES(${THIRD_PARTY_LIB})
LINK_DIRECTORIES(${THIRD_PARTY_LIB}/native)
LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})

ADD_EXECUTABLE(multiverso.test ${MULTIVERSO_TEST_SRC})


TARGET_LINK_LIBRARIES(multiverso.test mpich mpl zmq pthread multiverso)

SET_PROPERTY(TARGET multiverso.test PROPERTY CXX_STANDARD 11)
