SET(THIRD_PARTY ${MULTIVERSO_BINARY_DIR}/third_party)
SET(THIRD_PARTY_INC ${THIRD_PARTY}/include)
SET(THIRD_PARTY_LIB ${THIRD_PARTY}/lib)
SET(HEADERS_DIR ${MULTIVERSO_BINARY_DIR}/include/multiverso)
SET(EXECUTABLE_OUTPUT_PATH ${MULTIVERSO_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${MULTIVERSO_BINARY_DIR}/lib)


SET(MULTIVERSO_SERVER_SRC cl_parser.cpp main.cpp)

INCLUDE_DIRECTORIES(${HEADERS_DIR})
INCLUDE_DIRECTORIES(${THIRD_PARTY_INC})

LINK_DIRECTORIES(${THIRD_PARTY_LIB})
LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})

ADD_EXECUTABLE(multiverso.server ${MULTIVERSO_SERVER_SRC})


TARGET_LINK_LIBRARIES(multiverso.server mpich mpl zmq multiverso)


set_property(TARGET multiverso.server PROPERTY CXX_STANDARD 11)