
INCLUDE_DIRECTORIES(${HEADERS_DIR})
INCLUDE_DIRECTORIES(${THIRD_PARTY_INC})

SET(MULTIVERSO_SERVER_SRC cl_parser.cpp main.cpp)

MESSAGE(STATUS "multiver_server  ${THIRD_PARTY_INC}")

LINK_DIRECTORIES(${THIRD_PARTY_LIB})
LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})

ADD_EXECUTABLE(multiverso.server ${MULTIVERSO_SERVER_SRC})


TARGET_LINK_LIBRARIES(multiverso.server mpich mpl zmq pthread multiverso)

SET_PROPERTY(TARGET multiverso.server PROPERTY CXX_STANDARD 11)
